Added migrated custom policy verification